Add global metadata, adjust styles

--- a/src/styleguide/partials/footer.html
+++ b/src/styleguide/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="sg-footer">
     <div>
-        &copy; {{ title }}
+        &copy; {{ site.title }}
     </div>
 </footer>
 <script type="text/javascript">
