--- a/src/styleguide/partials/head.html
+++ b/src/styleguide/partials/head.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>{{title}} | Styleguide</title>
+  <title>{{ title }} | {{ site.title }}</title>
   <link rel="stylesheet" href="/styleguide/styles/guidebook.css">
 </head>
 
