--- a/src/styleguide/partials/header.html
+++ b/src/styleguide/partials/header.html
@@ -1,3 +1,3 @@
 <header class="sg-header">
-    <h1 class="sg-title">{{title}} the amazing styleguide</h1>
+    <span class="sg-title">{{ site.title }} the amazing styleguide</span>
 </header>
