--- a/src/styleguide/partials/sidebar.html
+++ b/src/styleguide/partials/sidebar.html
@@ -7,7 +7,7 @@
             <ul class="sg-subnav">
               {{#each this }}
                 <li class="sg-subnav-item">
-                  <a href="{{ this.path }}">{{ this.title }}</a>
+                  <a href="/{{ this.path }}">{{ this.title }}</a>
                 </li>
               {{/each}}
             </ul>
