--- a/src/styleguide/styles/_syntax.scss
+++ b/src/styleguide/styles/_syntax.scss
@@ -1,144 +1,71 @@
+/**
+ * GitHub Gist Theme
+ * Author : Louis Barranqueiro - https://github.com/LouisBarranqueiro
+ */
+
 .hljs {
-  display: block; padding: 0.5em;
-  background: #393939; color: #e3e2e0;
+  display: block;
+  background: white;
+  padding: 0.5em;
+  color: #333333;
+  overflow-x: auto;
 }
 
 .hljs-comment,
-.hljs-template_comment,
-.hljs-javadoc {
-  color: #696969;
-}
-
-.hljs-keyword,
-.ruby .hljs-function .hljs-keyword,
-.hljs-request,
-.hljs-status,
-.nginx .hljs-title {
-  color: #f66153;
-}
-
-.hljs-function .hljs-keyword,
-.hljs-sub .hljs-keyword,
-.method,
-.hljs-list .hljs-title {
-  color: #808dd3;
+.hljs-meta {
+  color: #969896;
 }
 
 .hljs-string,
-.hljs-tag .hljs-value,
-.hljs-cdata,
-.hljs-filter .hljs-argument,
-.hljs-attr_selector,
-.apache .hljs-cbracket,
-.hljs-date,
-.tex .hljs-command,
-.coffeescript .hljs-attribute {
-  color: #4ea1df;
+.hljs-variable,
+.hljs-template-variable,
+.hljs-strong,
+.hljs-emphasis,
+.hljs-quote {
+  color: #df5000;
 }
 
-.hljs-subst {
-  color: #DAEFA3;
+.hljs-keyword,
+.hljs-selector-tag,
+.hljs-type {
+  color: #a71d5d;
 }
 
-.hljs-regexp {
-  color: #E9C062;
+.hljs-literal,
+.hljs-symbol,
+.hljs-bullet,
+.hljs-attribute {
+  color: #0086b3;
+}
+
+.hljs-section,
+.hljs-name {
+  color: #63a35c;
+}
+
+.hljs-tag {
+  color: #333333;
 }
 
 .hljs-title,
-.hljs-sub .hljs-identifier,
-.hljs-pi,
-.hljs-tag,
-.hljs-tag .hljs-keyword,
-.hljs-decorator,
-.hljs-shebang,
-.hljs-prompt {
-  color: #f66153;
-}
-
-.hljs-symbol,
-.ruby .hljs-symbol .hljs-string,
-.hljs-number {
-  color: #4ea1df;
-}
-
-.hljs-params,
-.hljs-variable,
-.clojure .hljs-attribute {
-  color: #4ea1df;
-}
-
-.css .hljs-tag,
-.hljs-rules .hljs-property,
-.hljs-pseudo,
-.tex .hljs-special {
-  color: #f66153;
-}
-
-.css .hljs-class {
-  color: #4ea1df;
-}
-
-.hljs-rules .hljs-keyword {
-  color: #4ea1df;
-}
-
-.hljs-rules .hljs-value {
-  color: #f66153;
-}
-
-.css .hljs-id {
-  color: #8B98AB;
-}
-
-.hljs-annotation,
-.apache .hljs-sqbracket,
-.nginx .hljs-built_in {
-  color: #9B859D;
-}
-
-.hljs-preprocessor,
-.hljs-pragma {
-  color: #8996A8;
-}
-
-.hljs-hexcolor,
-.css .hljs-value .hljs-number {
-  color: #DD7B3B;
-}
-
-.css .hljs-function {
-  color: #DAD085;
-}
-
-.diff .hljs-header,
-.hljs-chunk,
-.tex .hljs-formula {
-  background-color: #0E2231;
-  color: #F8F8F8;
-  font-style: italic;
-}
-
-.diff .hljs-change {
-  background-color: #4A410D;
-  color: #F8F8F8;
+.hljs-attr,
+.hljs-selector-id,
+.hljs-selector-class,
+.hljs-selector-attr,
+.hljs-selector-pseudo {
+  color: #795da3;
 }
 
 .hljs-addition {
-  background-color: #253B22;
-  color: #F8F8F8;
+  color: #55a532;
+  background-color: #eaffea;
 }
 
 .hljs-deletion {
-  background-color: #420E09;
-  color: #F8F8F8;
+  color: #bd2c00;
+  background-color: #ffecec;
 }
 
-.coffeescript .javascript,
-.javascript .xml,
-.tex .hljs-formula,
-.xml .javascript,
-.xml .vbscript,
-.xml .css,
-.xml .hljs-cdata {
-  opacity: 0.5;
+.hljs-link {
+  text-decoration: underline;
 }
