--- a/src/styleguide/templates/default.html
+++ b/src/styleguide/templates/default.html
@@ -3,6 +3,7 @@
 <div class="sg-main">
     {{> sidebar}}
     <div class="sg-content">
+        <h1 class="sg-page-title">{{ title }}</h1>
         {{{contents}}}
     </div>
 </div>
