Update styles and add page subtitle and description

--- a/src/styleguide/partials/footer.html
+++ b/src/styleguide/partials/footer.html
@@ -6,7 +6,7 @@
 <script type="text/javascript">
   WebFontConfig = {
     google: {
-      families: ['Roboto:400,700,500,300:latin', 'Roboto+Mono::latin']
+      families: ['Roboto:400,700,500,300:latin', 'Roboto+Mono::latin', 'Montserrat:400,700:latin']
     }
   };
   (function () {
