--- a/src/styleguide/partials/header.html
+++ b/src/styleguide/partials/header.html
@@ -1,3 +1,3 @@
 <header class="sg-header">
-    <span class="sg-title">{{ site.title }} the amazing styleguide</span>
+    <span class="sg-title">{{ site.title }}</span>
 </header>
