Add option to add classes to UI example block

--- a/src/styleguide/styles/guidebook.scss
+++ b/src/styleguide/styles/guidebook.scss
@@ -265,6 +265,9 @@ p.sg-text {
 
 .sg-example-ui {
     padding: 2em;
+    &.sg-bgDark {
+        background-color: $sg-sidebar-bg-color;
+    }
 }
 
 .sg-example-code {
