--- a/src/styleguide/partials/head.html
+++ b/src/styleguide/partials/head.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ title }} | {{ site.title }}</title>
-  <link rel="stylesheet" href="/styleguide/styles/guidebook.css">
+  <link rel="stylesheet" href="{{rootPath}}styleguide/styles/guidebook.css">
 </head>
 
 <body class="sg">
