--- a/src/styleguide/partials/head.html
+++ b/src/styleguide/partials/head.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>{{ title }} | {{ site.title }}</title>
+  <title>{{ title }} | {{ site.name }}</title>
   <link rel="stylesheet" href="{{rootPath}}styleguide/styles/guidebook.css">
+  <link rel="stylesheet" href="{{rootPath}}{{ site.css }}">
 </head>
 
 <body class="sg">
