--- a/src/styleguide/partials/header.html
+++ b/src/styleguide/partials/header.html
@@ -1,3 +1,8 @@
 <header class="sg-header">
-    <span class="sg-title">{{ site.title }}</span>
+    <div>
+        <span class="sg-title">{{ site.name }}</span>
+    </div>
+    <div>
+        <span class="sg-version">v{{ site.version }}</span>
+    </div>
 </header>
