--- a/src/styleguide/styles/guidebook.scss
+++ b/src/styleguide/styles/guidebook.scss
@@ -9,6 +9,9 @@
 // Variables
 // ==========================================================================
 
+$sg-font-size: 16px;
+$sg-base-unit: 0.5rem;
+
 $sg-header-bg-color: #427DC2 !default;
 $sg-sidebar-bg-color: #3B5069 !default;
 $sg-content-bg-color: #ffffff !default;
@@ -22,7 +25,7 @@ $sg-text-font: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif !default
 
 $sg-title-color: #fff !default;
 
-$sg-padding: 1.5em !default;
+$sg-baseline: $sg-base-unit * 3 !default;
 
 //
 // Globals
@@ -31,8 +34,16 @@ $sg-padding: 1.5em !default;
 %sg-font-common {
     font-family: $sg-text-font;
     color: $sg-text-color;
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: $sg-font-size;
+    line-height: $sg-baseline;
+}
+
+html {
+    font-size: 100%;
+}
+
+body {
+    font-size: $sg-font-size;
 }
 
 //
@@ -56,7 +67,7 @@ $sg-padding: 1.5em !default;
 
 .sg-header {
     @extend %sg-font-common;
-    padding: ($sg-padding / 2) $sg-padding;
+    padding: ($sg-base-unit * 2) ($sg-base-unit * 3);
     background-color: $sg-header-bg-color;
 }
 
@@ -68,7 +79,7 @@ $sg-padding: 1.5em !default;
 
 .sg-footer {
     @extend %sg-font-common;
-    padding: ($sg-padding / 2) $sg-padding;
+    padding: ($sg-base-unit * 2) ($sg-base-unit * 3);
     background-color: $sg-footer-bg-color;
     color: #aeaeae;
 }
@@ -80,6 +91,7 @@ $sg-padding: 1.5em !default;
 .sg-title {
     @extend %sg-font-common;
     font-size: 1.5rem;
+    line-height: $sg-baseline;
     color: $sg-title-color;
     font-weight: 500;
     margin: 0;
@@ -91,7 +103,7 @@ $sg-padding: 1.5em !default;
 
 .sg-sidebar {
     min-width: 260px;
-    padding: $sg-padding;
+    padding: $sg-base-unit * 3;
     background-color: $sg-sidebar-bg-color;
     @media screen and (max-width: 640px) {
         order: 2;
@@ -153,7 +165,7 @@ $sg-padding: 1.5em !default;
 }
 
 .sg-intro {
-    padding: $sg-padding;
+    padding: ($sg-base-unit * 3) ($sg-base-unit * 6);
     background-color: $sg-intro-bg-color;
 }
 
@@ -162,8 +174,8 @@ $sg-padding: 1.5em !default;
     font-weight: 700;
     color: #73797e;
     font-size: 3rem;
-    margin: 0 0 1rem 0;
-    line-height: 1;
+    line-height: $sg-baseline * 3;
+    margin: 0;
 
     &:last-child {
         margin-bottom: 0;
@@ -172,9 +184,6 @@ $sg-padding: 1.5em !default;
 
 .sg-page-subtitle {
     font-family: $sg-text-font;
-    font-size: 1.375rem;
-    margin: 1rem 0 1rem 0;
-    line-height: 1.3;
 }
 
 .sg-page-description {
@@ -183,7 +192,6 @@ $sg-padding: 1.5em !default;
 
 .sg-status {
     display: inline-block;
-    padding: 0 .75em;
     border-radius: 100px;
 
     color: #fff;
@@ -209,10 +217,10 @@ $sg-padding: 1.5em !default;
         flex-direction: row;
         list-style: none;
         margin: 0;
-        padding: ($sg-padding / 2) $sg-padding;
+        padding: ($sg-base-unit * 2) ($sg-base-unit * 6);
 
         li {
-            padding: 0 1rem 0 0;
+            padding: 0 ($sg-base-unit * 3) 0 0;
 
             a {
                 font-family: $sg-heading-font;
@@ -224,7 +232,7 @@ $sg-padding: 1.5em !default;
 }
 
 .sg-section {
-    padding: $sg-padding;
+    padding: $sg-base-unit * 6;
 }
 
 //
@@ -234,24 +242,32 @@ $sg-padding: 1.5em !default;
 .sg-heading {
     @extend %sg-font-common;
     margin-top: 0;
-    margin-bottom: 1em;
 }
 
 h1.sg-heading {
     font-size: 3rem;
+    line-height: $sg-baseline * 3;
+    margin-bottom: $sg-base-unit;
 }
 
 h2.sg-heading {
     font-size: 2rem;
+    line-height: $sg-baseline * 2;
+    margin-bottom: $sg-base-unit * 2;
     border-bottom: 1px solid rgba($sg-text-color, .1);
 }
 
 h3.sg-heading {
     font-size: 1.5rem;
+    line-height: $sg-baseline;
+    margin-bottom: $sg-base-unit;
 }
 
 p.sg-text {
     font-family: $sg-text-font;
+    line-height: $sg-baseline;
+    margin-top: 0;
+    margin-bottom: $sg-base-unit * 2;
 }
 
 //
