--- a/src/styleguide/styles/guidebook.scss
+++ b/src/styleguide/styles/guidebook.scss
@@ -9,9 +9,6 @@
 // Variables
 // ==========================================================================
 
-$sg-font-size: 16px;
-$sg-base-unit: 0.5rem;
-
 $sg-header-bg-color: #427DC2 !default;
 $sg-sidebar-bg-color: #3B5069 !default;
 $sg-content-bg-color: #ffffff !default;
@@ -23,9 +20,11 @@ $sg-heading-font: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif !
 $sg-text-color: #323B43 !default;
 $sg-text-font: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
 
+$sg-border-color: #eee !default;
+
 $sg-title-color: #fff !default;
 
-$sg-baseline: $sg-base-unit * 3 !default;
+$sg-padding: 1.5em !default;
 
 //
 // Globals
@@ -34,16 +33,8 @@ $sg-baseline: $sg-base-unit * 3 !default;
 %sg-font-common {
     font-family: $sg-text-font;
     color: $sg-text-color;
-    font-size: $sg-font-size;
-    line-height: $sg-baseline;
-}
-
-html {
-    font-size: 100%;
-}
-
-body {
-    font-size: $sg-font-size;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 //
@@ -67,7 +58,11 @@ body {
 
 .sg-header {
     @extend %sg-font-common;
-    padding: ($sg-base-unit * 2) ($sg-base-unit * 3);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: ($sg-padding / 2) $sg-padding;
     background-color: $sg-header-bg-color;
 }
 
@@ -79,7 +74,7 @@ body {
 
 .sg-footer {
     @extend %sg-font-common;
-    padding: ($sg-base-unit * 2) ($sg-base-unit * 3);
+    padding: ($sg-padding / 2) $sg-padding;
     background-color: $sg-footer-bg-color;
     color: #aeaeae;
 }
@@ -91,10 +86,14 @@ body {
 .sg-title {
     @extend %sg-font-common;
     font-size: 1.5rem;
-    line-height: $sg-baseline;
     color: $sg-title-color;
     font-weight: 500;
     margin: 0;
+}
+
+.sg-version {
+    color: $sg-title-color;
+    margin: 0 1em;
 }
 
 //
@@ -103,7 +102,7 @@ body {
 
 .sg-sidebar {
     min-width: 260px;
-    padding: $sg-base-unit * 3;
+    padding: $sg-padding;
     background-color: $sg-sidebar-bg-color;
     @media screen and (max-width: 640px) {
         order: 2;
@@ -165,7 +164,7 @@ body {
 }
 
 .sg-intro {
-    padding: ($sg-base-unit * 3) ($sg-base-unit * 6);
+    padding: $sg-padding;
     background-color: $sg-intro-bg-color;
 }
 
@@ -174,8 +173,8 @@ body {
     font-weight: 700;
     color: #73797e;
     font-size: 3rem;
-    line-height: $sg-baseline * 3;
-    margin: 0;
+    margin: 0 0 1rem 0;
+    line-height: 1;
 
     &:last-child {
         margin-bottom: 0;
@@ -184,6 +183,9 @@ body {
 
 .sg-page-subtitle {
     font-family: $sg-text-font;
+    font-size: 1.375rem;
+    margin: 1rem 0 1rem 0;
+    line-height: 1.3;
 }
 
 .sg-page-description {
@@ -192,6 +194,7 @@ body {
 
 .sg-status {
     display: inline-block;
+    padding: 0 .75em;
     border-radius: 100px;
 
     color: #fff;
@@ -217,10 +220,10 @@ body {
         flex-direction: row;
         list-style: none;
         margin: 0;
-        padding: ($sg-base-unit * 2) ($sg-base-unit * 6);
+        padding: ($sg-padding / 2) $sg-padding;
 
         li {
-            padding: 0 ($sg-base-unit * 3) 0 0;
+            padding: 0 1rem 0 0;
 
             a {
                 font-family: $sg-heading-font;
@@ -232,7 +235,7 @@ body {
 }
 
 .sg-section {
-    padding: $sg-base-unit * 6;
+    padding: $sg-padding;
 }
 
 //
@@ -242,32 +245,39 @@ body {
 .sg-heading {
     @extend %sg-font-common;
     margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 h1.sg-heading {
     font-size: 3rem;
-    line-height: $sg-baseline * 3;
-    margin-bottom: $sg-base-unit;
 }
 
 h2.sg-heading {
     font-size: 2rem;
-    line-height: $sg-baseline * 2;
-    margin-bottom: $sg-base-unit * 2;
     border-bottom: 1px solid rgba($sg-text-color, .1);
 }
 
 h3.sg-heading {
     font-size: 1.5rem;
-    line-height: $sg-baseline;
-    margin-bottom: $sg-base-unit;
 }
 
 p.sg-text {
     font-family: $sg-text-font;
-    line-height: $sg-baseline;
-    margin-top: 0;
-    margin-bottom: $sg-base-unit * 2;
+}
+
+//
+// Code
+// ==========================================================================
+
+.sg-code {
+    padding: 0 0.5em;
+    display: inline-block;
+    color: $sg-header-bg-color;
+    border: 1px solid $sg-header-bg-color;
+    background-color: #fff;
+    vertical-align: baseline;
+    border-radius: 3px;
+    line-height: 1.5em;
 }
 
 //
@@ -280,6 +290,7 @@ p.sg-text {
 }
 
 .sg-example-ui {
+    display: block;
     padding: 2em;
     &.sg-bgDark {
         background-color: $sg-sidebar-bg-color;
@@ -302,5 +313,111 @@ p.sg-text {
             font-family: 'Roboto Mono', monospace;
             white-space: pre-wrap;
         }
+    }
+}
+
+//
+// Grid
+// ==========================================================================
+
+.sg-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    margin: 0;
+    padding: 0;
+}
+
+.sg-grid-item {
+    flex: 0 1 auto;
+    margin: 1em;
+    padding: 0;
+    width: 180px;
+}
+
+//
+// Icons preview
+// ==========================================================================
+
+.sg-iconBox {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    text-align: center;
+    overflow: hidden;
+}
+
+.sg-iconBox-icon {
+    padding: 1em;
+}
+
+.sg-iconBox-name {
+    padding: 1em;
+    background-color: #f9f9f9;
+    overflow: hidden;
+}
+
+//
+// Tables
+// ==========================================================================
+
+.sg-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 3rem;
+
+    tr {
+        border-bottom: 1px solid $sg-border-color;
+    }
+
+    th,
+    td {
+        padding: 1em 0;
+    }
+
+    thead {
+        th {
+            text-align: left;
+        }
+    }
+}
+
+// ==========================================================================
+// Examples
+// ==========================================================================
+
+//
+// Grid examples
+// ==========================================================================
+
+.sg-grid-demo {
+    position: relative;
+    align-self: stretch;
+    padding: 10px 0;
+    height: 100%;
+    min-height: 36px;
+    background: #23CBCC;
+    border-radius: 2px;
+    text-align: center;
+    color: #fff;
+
+    .sg-grid-demo {
+        background: #012F3F;
+        border-radius: 0;
+    }
+
+    code {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0);
+    }
+
+    .sg-grid-demo-text {
+        margin: 0;
+        padding: 1em;
     }
 }
