--- a/src/styleguide/templates/default.html
+++ b/src/styleguide/templates/default.html
@@ -29,7 +29,7 @@
         </nav>
         {{/if}}
         <div class="sg-section">
-            {{{contents}}}
+            {{{body}}}
         </div>
     </div>
 </div>
