--- a/src/styleguide/partials/sidebar.html
+++ b/src/styleguide/partials/sidebar.html
@@ -3,11 +3,11 @@
       <ul class="sg-nav">
         {{#each collections }}
           <li class="sg-nav-item">
-            <span class="sg-nav-section">{{ format @key }}</span>
+            <span class="sg-nav-section">{{ this.title }}</span>
             <ul class="sg-subnav">
-              {{#each this }}
+              {{#each this.pages }}
                 <li class="sg-subnav-item">
-                  <a href="{{rootPath}}{{ this.path }}">{{ this.title }}</a>
+                  <a href="{{ this.path }}">{{ this.title }}</a>
                 </li>
               {{/each}}
             </ul>
